<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView_ocr_result"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:scrollbars="vertical" 
        android:text="@string/ocr_result_default" />
    
    <TextView
        android:layout_marginTop="230dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView_ocr_number"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/ocr_number_default" />
    
   <LinearLayout   
        android:layout_marginTop="280dp"
        android:layout_centerHorizontal="true"
        android:layout_width="180dp"  
        android:layout_height="wrap_content"  
        android:orientation="horizontal" >  
  
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1.0" 
                android:layout_width="wrap_content"  
                android:layout_height="fill_parent"
                android:textColor="@color/white"
		        android:textSize="20sp"
		        android:background="@drawable/selector_cancel"  
                android:text="@string/cancel" /> 
            <Button 
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1.0"
                android:layout_width="wrap_content"  
                android:layout_height="fill_parent"
                android:textColor="@color/white"
   		     	android:textSize="20sp"
   		     	android:background="@drawable/selector_pay" 
                android:text="@string/pay" />   
    </LinearLayout> 

</RelativeLayout>
