<?xml version="1.0" encoding="utf-8"?> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    xmlns:tools="http://schemas.android.com/tools"  
    android:layout_width="match_parent"  
    android:layout_height="match_parent"  
    android:orientation="vertical" >    
	
    <RelativeLayout 
        android:layout_width="fill_parent"  
    	android:layout_height="500dp" >
        
        <FrameLayout 
        android:layout_width="fill_parent"  
   		android:layout_height="fill_parent" 
   		android:id="@+id/frame_layout" >        
    	</FrameLayout>
    
    	<ImageView 
        android:layout_width="fill_parent"  
   		android:layout_height="fill_parent" 
   		android:scaleType="fitXY"
   		android:id="@+id/image_view"
   		android:src="@+drawable/mask"
   		android:contentDescription="@string/imageview_desc" />
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"  
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:focusable="true" 
		android:focusableInTouchMode="true" >
    
        <TextView  
            android:layout_weight="7.0"
            android:layout_width="fill_parent"    
            android:layout_height="wrap_content"  
            android:id="@+id/ocr_order"
            android:text="@string/ocr_order_default"
            android:textColor="@color/red"
            android:gravity="center"/>      
        <EditText 
            android:layout_weight="3.0" 
            android:layout_width="fill_parent"  
            android:layout_height="wrap_content"
            android:id="@+id/ocr_result"
            android:hint="@string/ocr_result_hint"
        	android:textColorHint="@color/gray"
        	android:gravity="center" />        
    </LinearLayout>
    
    <LinearLayout   
        android:layout_width="fill_parent"  
        android:layout_height="fill_parent"  
        android:orientation="horizontal" >  
  
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/button_commit"
                android:layout_weight="1.0" 
                android:layout_width="wrap_content"  
                android:layout_height="fill_parent"
                android:textColor="@color/white"
		        android:textSize="20sp"
		        android:background="@drawable/selector_commit"  
                android:text="@string/commit" /> 
            <Button 
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/button_take_photo"
                android:layout_weight="1.0"
                android:layout_width="wrap_content"  
                android:layout_height="fill_parent"
                android:textColor="@color/white"
   		     	android:textSize="20sp"
   		     	android:background="@drawable/selector_take_photo" 
                android:text="@string/take_photo" />
            <Button  
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/button_confirm"
                android:layout_weight="1.0"
                android:layout_width="wrap_content"  
                android:layout_height="fill_parent"
                android:textColor="@color/white"
		        android:textSize="20sp" 
		        android:background="@drawable/selector_confirm"
                android:text="@string/confirm" />    
    </LinearLayout> 
    
</LinearLayout>